getting post to work
